src/objects/Staff_Commission__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Service</label>
        <referenceTo>Client_Service__c</referenceTo>
        <relationshipLabel>Staff Commissions</relationshipLabel>
        <relationshipName>Staff_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>IF( Product_Sale__c != null, Product_Sale__r.Date__c, Client_Service__r.Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sale</label>
        <referenceTo>Product_Sale__c</referenceTo>
        <relationshipLabel>Staff Commissions</relationshipLabel>
        <relationshipName>Staff_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Staff Commissions</relationshipLabel>
        <relationshipName>Staff_Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Staff Commission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Client_Service__c</columns>
        <columns>Product_Sale__c</columns>
        <columns>Staff__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Staff Commission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>